@@ -23,6 +23,7 @@ Makefile.PL
 MANIFEST			This list of files
 META.yml
 papers/CI/README.md
+papers/how-to-upload-a-script-to-sparrowhub.md
 papers/rex.md
 papers/ssh.png
 README.md
