@@ -1,6 +1,8 @@
 0.2.15 2016-11-18
 
 * a formal release to rely on latest version of Outthentic
+* introducing SPARROW_NO_COLOR var
+
 
 0.2.14 2016-10-29
 
